--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "@types/node": "^24.10.1",
     "fs-extra": "^11.3.2",
     "multiple-cucumber-html-reporter": "^3.9.3",
-    "ts-node": "^10.9.2"
-  },
-  "dependencies": {
+    "ts-node": "^10.9.2",
     "cross-env": "^10.1.0"
   }
 }
