Turn on the Video recorder

--- a/executionConfig.json
+++ b/executionConfig.json
@@ -5,7 +5,7 @@
     "feature":"",
     "scenarioName":"",
     "testTag":"",
-    "recordVideo":"",
+    "recordVideo":"ON",
     "releaseName":"Jan_release_01",
     "cycleID":"AUTO-123"
 
